--- a/web/css/inadminpanel/niceforms-default.css
+++ b/web/css/inadminpanel/niceforms-default.css
@@ -37,6 +37,7 @@ line-height:32px;
 .NFCheck {cursor:pointer; position:absolute;width:20px; margin:0px 0 0 0; height:20px; border:1px solid transparent; background:url(img/checkbox.gif) no-repeat 0 0; z-index:2;}
 /*Buttons*/
 .NFButton {width:auto; height:34px; padding:0 15px; font-weight:bold; background:url(/images/inadminpanel/img/button.gif) repeat-x 0 0; cursor:pointer; border:none;color:#FFFFFF; text-shadow:1px 1px #45add8;vertical-align:middle;}
+.NFButtonToRight {width:auto; height:34px; padding:0 15px; font-weight:bold; background:url(/images/inadminpanel/img/button.gif) repeat-x 0 0; cursor:pointer; border:none;color:#FFFFFF; text-shadow:1px 1px #45add8;vertical-align:middle; float:right}
 .NFButtonLeft, .NFButtonRight {width:10px; height:34px; vertical-align:middle;}
 .NFButtonLeft {background:url(/images/inadminpanel/img/button-left.gif) no-repeat 0 0;}
 .NFButtonRight {background:url(/images/inadminpanel/img/button-right.gif) no-repeat 0 0;}
