--- a/web/css/inadminpanel/niceforms-default.css
+++ b/web/css/inadminpanel/niceforms-default.css
@@ -1,7 +1,7 @@
 .login_form{
 width:600px;
-height:250px;
-background:url(/images/inadminpanel/images/login_bg.png) no-repeat center top;
+height:400px;
+background: #FFFFFF no-repeat scroll center top;
 margin:20px 0 0 145px;
 float:left;
 padding:0px 0 0 0px;
