--- a/web/css/inadminpanel/niceforms-default.css
+++ b/web/css/inadminpanel/niceforms-default.css
@@ -11,9 +11,7 @@ width:600px;
 float:left;
 clear:both;
 }
-fieldset { border:none; clear:both;}
-label {font-size:11px; font-weight:bold; color:#666;}
-label a{font-size:11px; font-weight:bold; color:#666;}
+label a{font-size:11px; font-weight:bold; color:#666666;}
 dl {clear:both; width:600px;}
 dl.submit {clear:both; width:500px; text-align:center; padding:0 0 0 90px;}
 
@@ -95,4 +93,8 @@ line-height:32px;
 /*Hidden*/
 .NFhidden {opacity:0; z-index:-1; position:relative;}
 /*Safari*/
-select, input, textarea, button {outline:none; resize:none;}
+/*select, input, textarea, button {
+outline:none;
+background:url(/images/inadminpanel/img/input.gif) repeat-x scroll 0 0;
+resize:none;
+}*/
