--- a/web/css/inadminpanel/style.css
+++ b/web/css/inadminpanel/style.css
@@ -516,7 +516,7 @@ border-color: #95E0EF;
 border-style: solid;
 border-width: 1px 1px 1px 2px;
 float: left;
-height: 28px;
+height: 22px;
 padding: 5px 0 0 2px;
 width: 300px;
 }
@@ -538,4 +538,17 @@ legend{
 background-color: #0FCDF6;
 color: #FFFFFF;
 padding: 2px 5px;
+}
+legend.optional{
+color:#FFFFFF;
+background-color:#50c150;
+padding:2px 5px 2px 5px;
+}
+textarea.required{
+width:300px;
+height:75px;
+float:left;
+border: 1px solid #95E0EF;
+background-color:#f3fcfe;
+border-left-width:2px;
 }
