--- a/web/css/inadminpanel/style.css
+++ b/web/css/inadminpanel/style.css
@@ -552,3 +552,23 @@ border: 1px solid #95E0EF;
 background-color:#f3fcfe;
 border-left-width:2px;
 }
+.double_list_select-selected{
+width:200px;
+height:200px;
+float:left;
+border: 1px solid #95E0EF;
+background-color:#f3fcfe;
+border-left-width:2px;
+}
+.double_list_select{
+width:200px;
+height:200px;
+float:left;
+border: 1px solid #95E0EF;
+background-color:#f3fcfe;
+border-left-width:2px;
+}
+.double_list_label{
+color:#666666;
+padding:2px 5px 2px 5px;
+}
