Register web page for companies

--- a/web/css/inadminpanel/niceforms-default.css
+++ b/web/css/inadminpanel/niceforms-default.css
@@ -1,6 +1,6 @@
 .login_form{
 width:700px;
-height:600px;
+height:auto;
 background: #FFFFFF no-repeat scroll center top;
 margin:20px 0 0 145px;
 float:left;
